# sente-rails

./: .gitignore  .pre-commit-config.yaml  DISCLOSURE.md  README.md  license.txt  pyproject.toml
docs/: API_SECURITY_DESIGN.md  COMPLIANCE_MATRIX.md  DEMO_WALKTHROUGH.md  PROGRAM_BRIEF.md  brief.css
docs/diagrams/: 01-layered-architecture.mmd  03-integration-map.mmd  04-workflow-vertical-1-trading-licence.mmd  05-workflow-vertical-2-lands-title.mmd  06-workflow-vertical-3-cross-mda.mmd  README.md
docs/legal/: SANDBOX_TOS.md
frontend/: bunfig.toml  eslint.config.js  package-lock.json  package.json  serve.mjs  vite.config.ts
frontend/public/logos/: README.md
frontend/src/: routeTree.gen.ts  router.tsx  server.ts  start.ts  styles.css
frontend/src/components/: app-shell.tsx  marketing-footer.tsx  marketing-shell.tsx  marketing-top-bar.tsx
frontend/src/hooks/: use-mobile.tsx
frontend/src/lib/: agencies.ts  agency-icon.tsx  api.ts  auth-fetch.ts  error-capture.ts  error-page.ts  me.ts  notices.ts  ops.ts  printer.ts  services.ts  session.ts  theme.ts  use-scanner.ts  utils.ts  work.ts
frontend/src/routes/: __root.tsx  dashboard.billing.tsx  dashboard.index.tsx  dashboard.keys.tsx  dashboard.logs.tsx  dashboard.settings.tsx  dashboard.tsx  docs.api-standards.tsx  docs.catalogue.agencies.tsx  docs.catalogue.services.tsx  docs.cookbook.tsx  docs.explorer.tsx  docs.index.tsx  docs.quick-start.tsx  docs.sdks.tsx  docs.security.tsx  docs.tsx  docs.webhooks.tsx  index.tsx  ops.adapters.tsx  ops.audit.tsx  ops.index.tsx  ops.integrators.tsx  ops.keys.tsx  ops.mdas.tsx  ops.oversight.tsx  ops.services.tsx  ops.shifts.tsx  ops.system.tsx  ops.tsx  signin.expired.tsx  signin.index.tsx  signin.sent.tsx  signin.tsx  signup.tsx  (+8 more)
handbook/: 00-the-big-picture.md  01-money-and-data-flow.md  02-government-connections.md  03-the-citizen.md  04-the-counter-clerk.md  05-the-supervisor.md  06-the-integrator-developer.md  07-the-mda-agency.md  08-the-platform-admin.md  09-the-auditor-general-oversight.md  10-who-can-do-what.md  README.md  glossary.md
scripts/: audit-disclosure.sh
sente_rails/: __init__.py  auth.py  demo_reset.py  hooks.py  modules.txt
sente_rails/adapters/: base.py  dispatch.py
sente_rails/api/: __init__.py
sente_rails/jobs/: anomaly_detector.py  prn_buffer_worker.py  propagation_worker.py
sente_rails/middleware/: response_shape.py  router.py
sente_rails/notifications/: sms.py
sente_rails/utils/: anomaly.py  consent.py  fee_schedule.py  propagation.py
sente_rails/www/: index.html  index.py
(+116 files in other folders)
